--- a/ncm-tui/Cargo.toml
+++ b/ncm-tui/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.93"
-#async-trait = "0.1.83"
 
 crossterm = { version = "0.28.1", features = ["serde"] }
 
@@ -17,7 +16,7 @@ lazy_static = "1.5.0"
 log = "0.4.22"
 
 ncm-api = { path = "../ncm-api" }
-# ncm-play = { path = "../ncm-play" }
+ncm-play = { path = "../ncm-play" }
 
 ratatui = { version = "0.29.0", features = ["serde"] }
 
