--- a/ncm-tui/Cargo.toml
+++ b/ncm-tui/Cargo.toml
@@ -12,6 +12,11 @@ dirs-next = "2.0.0"
 
 fast_qr = "0.12.6"
 
+gstreamer = "0.23.3"
+gstreamer-play = "0.23.2"
+
+itertools = "0.13.0"
+
 lazy_static = "1.5.0"
 log = "0.4.22"
 
