feat(tui+play+api):重构main_screen，将歌词和歌单model提取到Player中，重构歌词model和view逻辑，重构api的歌词编码逻辑，修复歌词和翻译匹配失败的bug

--- a/ncm-play/Cargo.toml
+++ b/ncm-play/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.93"
+
 gstreamer = "0.23.3"
 gstreamer-play = "0.23.2"
+
+ncm-api = { path = "../ncm-api" }
+
+tokio = "1.41.1"
