--- a/ncm-tui/Cargo.toml
+++ b/ncm-tui/Cargo.toml
@@ -10,6 +10,8 @@ crossterm = { version = "0.28.1", features = ["serde"] }
 
 dirs-next = "2.0.0"
 
+env_logger = "0.11.5"
+
 fast_qr = "0.12.6"
 
 gstreamer = "0.23.3"
