--- a/ncm-play/Cargo.toml
+++ b/ncm-play/Cargo.toml
@@ -11,7 +11,7 @@ gstreamer-play = "0.23.2"
 
 log = "0.4.22"
 
-ncm-client = { path = "../ncm-client" }
+ncm-api = { path = "../ncm-api" }
 
 rand = "0.8.5"
 
